--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mike Smith Portfolio</title>
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="./dist/css/main.css">
     <script src="https://kit.fontawesome.com/9f6bc6a017.js" crossorigin="anonymous" defer></script>
-    <script src='js/main.js' defer></script>
+    <script src='./dist/js/main.js' defer></script>
 </head>
 <body>
     <header>
